--- a/_config.yml
+++ b/_config.yml
@@ -51,11 +51,11 @@ jekyll-archives:
 
 # Category descriptions (for archive pages)
 descriptions:
-  - cat: jekyll
-    desc: "Posts describing Jekyll setup techniques."
+  - cat: epigraphy
+    desc: "Posts about epigraphy."
 
-  - cat: dummy
-    desc: "Just some placeholder posts, lorem ipsum and the rest."
+  - cat: digital humanities
+    desc: "Posts about digital humanities."
 
 # Social icons and sharing options
 #
@@ -65,7 +65,7 @@ descriptions:
 #
 # Example:
 #
-# social:
+ social:
    - name: Twitter                         # Name of the service
      icon: twitter                         # Font Awesome icon to use (minus fa- prefix)
      username: "@japettulda"             # (User) Name to display in the footer link
