--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-# External gems
-# See http://ixti.net/software/2013/01/28/using-jekyll-plugins-on-github-pages.html for making `jekyll archives` work.
-gems:
-  - jekyll-archives # Sorry, not GitHub pages friendly!
-  - jekyll-sitemap
-  - jekyll-paginate
+## External gems
+## See http://ixti.net/software/2013/01/28/using-jekyll-plugins-on-github-pages.html for making `jekyll archives` work.
+#gems:
+#  - jekyll-archives # Sorry, not GitHub pages friendly!
+#  - jekyll-sitemap
+#  - jekyll-paginate#
 
-exclude:
-  - "/vendor/"
+#exclude:
+#  - "/vendor/"
 
 # Site settings
 title: Petrified voices
