fiddling with config

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 #  - "/vendor/"
 
 # Site settings
-title: Petrified voices
+title: "Petrified voices"
 subtitle: "Petra's personal research on why people created thousands messages written into stone and what can we learn from them"
 email: petra.janouchova@gmail.com
 name: Petra Janouchova
