fidling with config

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
   #- jekyll-sitemap
   #- jekyll-paginate#
 
-exclude:
-  - "/vendor/"
+#exclude:
+#  - "/vendor/"
 
 # Site settings
 title: "Petrified voices"
